--- a/package.json
+++ b/package.json
@@ -10,20 +10,16 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "framer-motion": "^12.26.2",
-    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "papaparse": "^5.5.3",
     "pdf-parse": "^2.4.5",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^25",
     "@types/papaparse": "^5.5.2",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
